Seperate into different files
Seperated the css and js from the html

--- a/Ticketing.html
+++ b/Ticketing.html
@@ -1,23 +1,7 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <style>
-      .ticket-description{
-        display     : none;
-        padding-left: 40px;
-      }
-      .expandable{
-        cursor       : default;
-        padding-left : 10px;
-        padding-right: 5px;
-      }
-      .notExpandable{
-        padding-left : 24px;
-      }
-      ul{
-        list-style-type: none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <form method="post">
@@ -38,56 +22,6 @@
     </form>
     <ul id="list-task">
     </ul>
-    <script>
-      var tasks;
-      tasks = localStorage["tasks"]===undefined?[]:JSON.parse(localStorage["tasks"]);
-      $(document).ready(
-        function(){
-          displayArrayAsList(tasks,"#list-task");
-          $("#input-title").focus();
-          $(document).on("click", ".expandable", function(event){
-            $(event.target).siblings(".ticket-description").toggle();
-          });
-          $(document).on("click", ".checkbox", function(event){
-            tasks[this.id].complete = this.checked?true:false;
-            localStorage.setItem("tasks",JSON.stringify(tasks));
-          });
-        });
-      $("form").submit(
-        function(event){
-          event.preventDefault();
-          tasks.push(new Task($("#input-title").val(), $("#input-description").val()));
-          localStorage.setItem("tasks",JSON.stringify(tasks));
-          displayArrayAsList(tasks, "#list-task");
-          return false;
-        });
-      $("#clear-button").click(function(){
-        localStorage.clear();
-        tasks = [];
-        $("#list-task").empty();
-      });
-      function displayArrayAsList(array, listid){
-        $(listid).empty();
-        for(var i = 0; i<array.length;i++){
-          $(listid).append([
-          '<li>',
-              array[i].complete?
-              '<input class="checkbox" type="checkbox" id="'+i+'" checked/>':
-              '<input class="checkbox" type="checkbox" id="'+i+'"/>',
-              array[i].description?
-              '<span class="expandable">+</span>':'<span class="notExpandable"/>',
-              '<label for="' +i+'">'+array[i].title+'</label>',
-              '<div class="ticket-description">',
-                  array[i].description,
-              '</div>',
-          '</li>'].join(''));
-        }
-      };
-      function Task(title, description) {
-        this.title       = title;
-        this.description = description;
-        this.complete    = false;
-      };
-    </script>
+    <script src="ticketing.js" type="text/javascript"></script>
   </body>
 </html>
