Added functionality to remove completed tasks
Added a button and functionality to remove completed tasks

--- a/Ticketing.html
+++ b/Ticketing.html
@@ -14,11 +14,10 @@
           <td><label for="input-description">Description:</label></td>
           <td><input id="input-description" type="text" name="title"/></td>
         </tr>
-        <tr>
-          <td><input type="submit" value="Submit"/></td>
-          <td><input id="clear-button"type="button" value="Clear"/></td>
-        </tr>
       </table>
+      <span><input type="submit" value="Submit"/></span>
+      <span><input id="clear-button" type="button" value="Clear"/></span>
+      <span><input id="remove-completed-button" type="button" value="Remove Complete"/></span>
     </form>
     <ul id="list-task">
     </ul>
